{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 28,
  "lineage": "62a60c1e-56ff-009c-40c1-4d8d86d7a35a",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879870594096:vpc/vpc-0b1c44ebe76b5c435",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-05bacec4530e1d50c",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-a624a3dc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b1c44ebe76b5c435",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-066d2edcade25625c",
            "owner_id": "879870594096"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:879870594096:loadbalancer/app/LB-APPmario/fb4dea997fb16ee6",
            "arn_suffix": "app/LB-APPmario/fb4dea997fb16ee6",
            "desync_mitigation_mode": "defensive",
            "dns_name": "LB-APPmario-1561439790.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:879870594096:loadbalancer/app/LB-APPmario/fb4dea997fb16ee6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "LB-APPmario",
            "security_groups": [
              "sg-00f2d1d92d740a25a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-017055179f15e7a92"
              },
              {
                "subnet_id": "subnet-05986a065e786588a"
              },
              {
                "subnet_id": "subnet-08f19f3c219a4519e"
              },
              {
                "subnet_id": "subnet-0ae669b1608c64384"
              },
              {
                "subnet_id": "subnet-0ef1def53cb55e7bd"
              },
              {
                "subnet_id": "subnet-0ff435cb861ec9962"
              }
            ],
            "subnets": [
              "subnet-017055179f15e7a92",
              "subnet-05986a065e786588a",
              "subnet-08f19f3c219a4519e",
              "subnet-0ae669b1608c64384",
              "subnet-0ef1def53cb55e7bd",
              "subnet-0ff435cb861ec9962"
            ],
            "tags": {
              "Environment": "production",
              "Name": "AWS_LB"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "AWS_LB"
            },
            "vpc_id": "vpc-0b1c44ebe76b5c435",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.Allow_all",
            "data.aws_subnet_ids.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "Lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:879870594096:listener/app/LB-APPmario/fb4dea997fb16ee6/e9078e80abd98c16",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:879870594096:targetgroup/tg-Proyecto-ron/00e1b12c9dc0de0e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:879870594096:listener/app/LB-APPmario/fb4dea997fb16ee6/e9078e80abd98c16",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:879870594096:loadbalancer/app/LB-APPmario/fb4dea997fb16ee6",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.test",
            "aws_lb_target_group.t_group",
            "aws_security_group.Allow_all",
            "data.aws_subnet_ids.subnet",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "t_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:879870594096:targetgroup/tg-Proyecto-ron/00e1b12c9dc0de0e",
            "arn_suffix": "targetgroup/tg-Proyecto-ron/00e1b12c9dc0de0e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:879870594096:targetgroup/tg-Proyecto-ron/00e1b12c9dc0de0e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-Proyecto-ron",
            "port": 9600,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b1c44ebe76b5c435"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879870594096:security-group/sg-00f2d1d92d740a25a",
            "description": "grupo de seguridad creado con terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00f2d1d92d740a25a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8600,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8600
              }
            ],
            "name": "SG_AWS_Pmario",
            "name_prefix": "",
            "owner_id": "879870594096",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Nuevo_SG"
            },
            "tags_all": {
              "Name": "Nuevo_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1c44ebe76b5c435"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}